# blog-multiauthor

./: README.md  informações.txt  planejamento.docx  pyproject.toml
blog_multiauthor/: db.sqlite3  manage.py  teste.html
blog_multiauthor/blogApp/: admin.py  forms.py  models.py  urls.py  views.py
blog_multiauthor/blogApp/migrations/: 0001_initial.py  0002_post_contenttexttest.py  0003_auto_20241220_0905.py
blog_multiauthor/blogApp/templates/: home.html
blog_multiauthor/blogApp/templates/blogApp/: createPost.html  home.html  listPosts.html  testeAutenticacao.html
blog_multiauthor/blogApp/templates/core/: base.html
blog_multiauthor/blog_multiauthor/: asgi.py  settings.py  urls.py  wsgi.py
blog_multiauthor/sapinho 3d/account/: loginaa.html
blog_multiauthor/static/blogApp/core/css/: style.css
