[tool.poetry]
name = "blog-multiauthor"
version = "0.1.0"
description = ""
authors = ["Daniel Dantas <daniel.dantas808@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "3.2.24"
django-summernote = "^0.8.20.0"
tinycss2 = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
