[tool.poetry]
name = "blog-multiauthor"
version = "0.1.0"
description = ""
authors = ["Daniel Dantas <daniel.dantas808@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.11"
django = "^5.1.4"
django-summernote = "^0.8.20.0"
tinycss2 = "^1.4.0"
django-allauth = {extras = ["socialaccount"], version = "^65.3.1"}
pyjwt = "^2.10.1"
cryptography = "^44.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
